@@ -250,3 +250,6 @@ Changes to allow something like netperf -H ::1 to work
 
 Frank Schuster
 Discovering that FreeBSD 8.X also does not need an SCTP library
+
+Josselin Costanzi
+DEBUG_LOG_FILE patch for Android
